<resources>
    <string name="app_name">SensorList</string>
    <string name="sensor_list_label">Available Sensors</string>
    <string name="sensor_name_label">name</string>
    <string name="sensor_name_default">(name)</string>
    <string name="sensor_type_label">type</string>
    <string name="sensor_type_default">(type)</string>
    <string name="sensor_type_string_label">type string</string>
    <string name="sensor_type_string_default">(type string)</string>
    <string name="vendor_label">vendor</string>
    <string name="vendor_default">(vendor)</string>
    <string name="delay_label">delay</string>
    <string name="delay_default">(delay)</string>
    <string name="delay_format">min=%d, max=%d</string>
    <string name="accuracy_label">accuracy</string>
    <string name="accuracy_default">(accuracy)</string>
    <string name="timestemp_label">timestamp</string>
    <string name="timestamp_default">(timestemp)</string>
    <string name="data_size_label">data size</string>
    <string name="data_size_default">(data size)</string>
    <string name="value0_label">value[0]</string>
    <string name="value1_label">value[1]</string>
    <string name="value2_label">value[2]</string>
    <string name="value3_label">value[3]</string>
    <string name="value4_label">value[4]</string>
    <string name="value5_label">value[5]</string>
    <string name="value6_label">value[6]</string>
    <string name="value7_label">value[7]</string>
    <string name="value_default">(value)</string>
    <string name="int_format">%d</string>
    <string name="long_format">%d</string>
    <string name="float_format">%f</string>
    <string name="toast_no_sensor_manager">No sensor manager available</string>
    <string name="toast_no_such_sensor">No such sensor</string>
</resources>
