<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorDataActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/sensor_name_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_name_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sensor_name_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_name_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sensor_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sensor_type_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sensor_type_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_name_view" />

    <TextView
        android:id="@+id/sensor_type_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sensor_type_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sensor_type_label"
        app:layout_constraintTop_toBottomOf="@+id/sensor_name_view" />

    <TextView
        android:id="@+id/sensor_type_string_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sensor_type_string_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_type_view" />

    <TextView
        android:id="@+id/sensor_type_string_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sensor_type_string_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sensor_type_string_label"
        app:layout_constraintTop_toBottomOf="@+id/sensor_type_view" />

    <TextView
        android:id="@+id/vendor_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/vendor_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_type_string_view" />

    <TextView
        android:id="@+id/vendor_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vendor_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vendor_label"
        app:layout_constraintTop_toBottomOf="@+id/sensor_type_string_view" />


    <TextView
        android:id="@+id/delay_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/delay_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_view" />

    <TextView
        android:id="@+id/delay_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/delay_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delay_label"
        app:layout_constraintTop_toBottomOf="@+id/vendor_view" />

    <TextView
        android:id="@+id/accuracy_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/accuracy_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delay_view" />

    <TextView
        android:id="@+id/accuracy_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/accuracy_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accuracy_label"
        app:layout_constraintTop_toBottomOf="@+id/delay_view" />

    <TextView
        android:id="@+id/timestamp_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/timestemp_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_view" />

    <TextView
        android:id="@+id/timestamp_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/timestamp_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timestamp_label"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_view" />

    <TextView
        android:id="@+id/data_size_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/data_size_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timestamp_view" />

    <TextView
        android:id="@+id/data_size_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/data_size_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/data_size_label"
        app:layout_constraintTop_toBottomOf="@+id/timestamp_view" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/value0_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_size_view" />

    <TextView
        android:id="@+id/value0_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/data_size_view" />

    <TextView
        android:id="@+id/value1_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value1_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value0_view" />

    <TextView
        android:id="@+id/value1_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value1_label"
        app:layout_constraintTop_toBottomOf="@+id/value0_view" />

    <TextView
        android:id="@+id/value2_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value2_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value1_view" />

    <TextView
        android:id="@+id/value2_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value2_label"
        app:layout_constraintTop_toBottomOf="@+id/value1_view" />

    <TextView
        android:id="@+id/value3_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value3_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value2_view" />

    <TextView
        android:id="@+id/value3_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value3_label"
        app:layout_constraintTop_toBottomOf="@+id/value2_view" />

    <TextView
        android:id="@+id/value4_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value4_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value3_view" />

    <TextView
        android:id="@+id/value4_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value4_label"
        app:layout_constraintTop_toBottomOf="@+id/value3_view" />

    <TextView
        android:id="@+id/value5_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value5_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value4_view" />

    <TextView
        android:id="@+id/value5_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value5_label"
        app:layout_constraintTop_toBottomOf="@+id/value4_view" />

    <TextView
        android:id="@+id/value6_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value6_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value5_view" />

    <TextView
        android:id="@+id/value6_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value6_label"
        app:layout_constraintTop_toBottomOf="@+id/value5_view" />

    <TextView
        android:id="@+id/value7_label"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value7_label"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value6_view" />

    <TextView
        android:id="@+id/value7_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_default"
        android:textSize="@dimen/content_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/value7_label"
        app:layout_constraintTop_toBottomOf="@+id/value6_view" />
</android.support.constraint.ConstraintLayout>